selfhost/test/parser/functiondecl_error_self_variadic.out
Error at %FILE_NAME%:1:10
Unexpected token '*':
  |  func foo(*self) {}
              ^